Now working offline completely

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <html>
 <head>
-    <link rel="stylesheet" href="src/styles/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="src/styles/myapp.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="src/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="src/styles/myapp.css">
+    <link rel="apple-touch-icon" href="images/icon-152.png">   
+    <meta name="theme-color" content="white"/>  
+    <meta name="apple-mobile-web-app-capable" content="yes">  
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
+    <meta name="apple-mobile-web-app-title" content="Canteen POS"> 
+    <meta name="msapplication-TileImage" content="images/icon-144.png">  
+    <meta name="msapplication-TileColor" content="#FFFFFF">
     <script src="src/deps/vue.js"></script>
     <script src="src/deps/vue-router.js"></script>
     <script src="src/deps/vuex.js"></script>
-    <script src="src/deps/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="src/deps/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="src/deps/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="src/deps/jquery-3.4.1.slim.min.js"></script>
+    <script src="src/deps/popper.min.js"></script>
+    <script src="src/deps/bootstrap.min.js"></script>
     <script src="src/deps/axios.min.js"></script>
     <script src="src/deps/pouchdb-7.1.1.min.js"></script>
+    <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="app">
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #e3f2fd;">
             <a class="navbar-brand" href="#">Canteen POS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -40,7 +48,15 @@
             <router-view></router-view>
           </div>
     </div>
-    
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+                .register('./sw.js', {
+                  scope : '/'
+                });
+      }
+    </script>
     <script src="src/app.js" type="module"></script>
+    
 </body>
 </html>
