--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                     <a class="dropdown-item" href="#">Reload App</a>
                     <a class="dropdown-item" href="#">Manage Users</a>
                     <a class="dropdown-item" href="#">Reset Password</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" v-on:click="addReferenceData">Add Reference Data</a>
+                    <a class="dropdown-item" v-on:click="createViews">Add Reference Data</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" v-on:click="logOut()">Log Out</a>
                   </div>
