First chart is working

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="src/deps/axios.min.js"></script>
     <script src="src/deps/pouchdb-7.1.1.min.js"></script>
     <script src="/src/deps/pouchdb.authentication.min.js"></script>
+    <script src="src/deps/charts.min.js"></script>
     <link rel="stylesheet" href="src/styles/icons.css">
     <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
