--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="form-group">
                   <label for="password">Password</label>
-                  <input v-model="password" type="password" class="form-control" id="password" placeholder="Password">
+                  <input v-model="password" :type="'password'" class="form-control" id="password" placeholder="Password">
                 </div>
                 <div class="form-group">
                   <label for="server">Password</label>
