changes to login form'

--- a/app/index.html
+++ b/app/index.html
@@ -92,7 +92,7 @@
                   <input v-model="password" :type="'password'" class="form-control" id="password" placeholder="Password">
                 </div>
                 <div class="form-group">
-                  <label for="server">Password</label>
+                  <label for="server">Couch Server</label>
                   <input v-model="server" type="text" class="form-control" id="server" placeholder="Server">
                 </div>
                 <button type="button" class="btn btn-primary float-right" v-on:click="login()">Login</button>
