--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="src/styles/bootstrap.min.css">
     <link rel="stylesheet" href="src/styles/myapp.css">
@@ -12,7 +13,7 @@
     <script src="src/deps/vue.js"></script>
     <script src="src/deps/vue-router.js"></script>
     <script src="src/deps/vuex.js"></script>
-    <script src="src/deps/jquery-3.4.1.slim.min.js"></script>
+    <script src="src/deps/jquery-3.5.min.js"></script>
     <script src="src/deps/popper.min.js"></script>
     <script src="src/deps/bootstrap.min.js"></script>
     <script src="src/deps/axios.min.js"></script>
@@ -21,7 +22,8 @@
     <script src="src/deps/charts.min.js"></script>
     <link rel="stylesheet" href="src/styles/icons.css">
     <link rel="manifest" href="/manifest.json">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+    <title>Point of Sale</title>
 </head>
 <body>
     <div id="app">
